Fix whitespace at bottom
There was an issue with whitespace with mobiles that was a result of x-overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 html {
     overflow: auto;
     min-height: 100vh;
+    overflow-x: scroll;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
     padding: 0;
     min-height: 100vh;
     font-size: 16px;
+    overflow-x:scroll;
 }
 
 ul {
